--- a/src/Component/SingleEvent.css
+++ b/src/Component/SingleEvent.css
@@ -1,7 +1,7 @@
 .card {
   display: inline-block;
   width: 80%;
-  max-width: 800px;
+  max-width: 600px;
   font-size: 20px;
   padding: 0.25em;
   margin: 20px 20px;
@@ -18,9 +18,9 @@
 }
 
 .description {
-  text-align: start;
+  text-align: center;
   padding: 0.25rem;
-  margin: 20px 20px;
+  margin: 60px 30px;
 }
 
 .button {
