--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,6 @@
   text-align: center;
   font-family: lato;
   font-weight: lighter;
-  display: flex;
-  flex-direction: column;
 }
 
 :root {
@@ -12,5 +10,12 @@
 
 .header{
   background-color: rgb(54, 192, 211);
-  padding: 30px 20px;
+  padding: 30px 100px;
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+}
+
+.header img{
+  height: 80px;
 }
