--- a/src/Component/SingleEvent.css
+++ b/src/Component/SingleEvent.css
@@ -1,14 +1,13 @@
 .card {
-  display: inline-block;
-  width: 80%;
-  max-width: 600px;
+  width: 45%;
   font-size: 20px;
   padding: 0.25em;
   margin: 20px 20px;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.856);
   border: 0.5px, solid, rgb(160, 160, 160);
-  transition: all 0.2s ease-in;
+  animation: ease-in-out 2s linear;
+  
 }
 .card img {
   width: 30%;
