--- a/src/Component/SingleEvent.css
+++ b/src/Component/SingleEvent.css
@@ -1,5 +1,5 @@
 .card {
-  width: 45%;
+  text-align: center;
   font-size: 20px;
   padding: 0.25em;
   margin: 20px 20px;
@@ -7,21 +7,15 @@
   background-color: rgba(255, 255, 255, 0.856);
   border: 0.5px, solid, rgb(160, 160, 160);
   animation: ease-in-out 2s linear;
-  
 }
+
 .card img {
+  display: inline-block;
   width: 30%;
   min-width: 300px;
   padding: 30px;
   object-fit: scale-down;
 }
-
-.description {
-  text-align: center;
-  padding: 0.25rem;
-  margin: 60px 30px;
-}
-
 .button {
   width: 20%;
   font-weight: bold;
@@ -32,5 +26,5 @@
 }
 .button:hover {
   box-shadow: 0px 5px 10px rgba(116, 116, 116, 0.4);
-  transition: all 0.1s ease-in;
+  transition: all 0.15s ease-in;
 }
