--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,19 @@
 .App {
-align-content: center;  
-font-family: lato;
+  text-align: center;
+  font-family: lato;
   font-weight: lighter;
 }
 
 :root {
-  background-color: rgb(240, 240, 240);
+  background-color: #f7f7f7;
+  background-image: url("https://img.freepik.com/free-vector/abstract-paper-hexagon-white-background_51543-7.jpg?size=626&ext=jpg");
+  background-position-x: 0px;
+  background-position-y: 0px;
+  background-size: 80%;
+  /* animation: backgroundMove 100%, ease-in-out infinite; */
 }
 
-.header{
+.header {
   background-color: rgb(54, 192, 211);
   padding: 30px 100px;
   display: flex;
@@ -16,6 +21,10 @@ font-family: lato;
   align-content: center;
 }
 
-.header img{
+.header img {
   height: 80px;
+}
+
+.gif {
+  position: fixed;
 }
