--- a/src/Component/Header.css
+++ b/src/Component/Header.css
@@ -1,4 +1,24 @@
-.Header{
-  background-color: rgb(54, 192, 211);
-  padding: 30px 20px;
+.Header {
+  background-color: rgba(255, 255, 255, 0.856);
+  padding: 20px 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  box-shadow: 0px 5px 10px rgba(116, 116, 116, 0.4);
+  position: static;
+}
+
+.Header a {
+  text-decoration: none;
+  font-size: 18px;
+  color: black;
+}
+
+.Header a:hover{
+  color: orange;
+}
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%
 }
