--- a/src/Component/SingleEvent.css
+++ b/src/Component/SingleEvent.css
@@ -1,30 +1,49 @@
 .card {
+  display: flex;
   text-align: center;
-  font-size: 20px;
+  width: 70%;
+  max-width: 970px;
+  max-height: 650px;
+  font-size: 18px;
   padding: 0.25em;
-  margin: 20px 20px;
+  margin: 10px auto;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.856);
-  border: 0.5px, solid, rgb(160, 160, 160);
-  animation: ease-in-out 2s linear;
+  /* border: 0.5px solid rgb(160, 160, 160); */
 }
+
 
 .card img {
   display: inline-block;
-  width: 30%;
-  min-width: 300px;
+  width: 40%;
+  max-width: 500px;
   padding: 30px;
   object-fit: scale-down;
 }
+.text-container{
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+}
+.text-container::-webkit-scrollbar {
+  display: none;
+}
+
 .button {
-  width: 20%;
   font-weight: bold;
-  padding: 10px 10px;
-  margin: 20px 20px;
+  padding: 15px 70px;
+  margin: 20px 20px auto;
+  margin-bottom: 40px;
   background-color: rgb(255, 133, 34);
   border-radius: 20px;
 }
 .button:hover {
   box-shadow: 0px 5px 10px rgba(116, 116, 116, 0.4);
   transition: all 0.15s ease-in;
+}
+.description {
+  margin: auto;
+  width: 90%;
+  min-width: 200px;
+  max-width: 900px;
 }
