--- a/src/Component/Footer.css
+++ b/src/Component/Footer.css
@@ -1,4 +1,5 @@
 .Footer {
-  background-color: rgb(218, 218, 218);
+  background-color: rgba(255, 255, 255, 0.856);
   padding: 30px 20px;
+  border-top: 10px grey;
 }
