--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,7 @@
 }
 
 :root {
-  background-color:#4ABDAC;
-  /* background-image: url("https://img.freepik.com/free-vector/abstract-paper-hexagon-white-background_51543-7.jpg?size=626&ext=jpg"); */
+  background-color: #ffffff;
   background-position-x: 0px;
   background-position-y: 0px;
   background-size: 80%;
@@ -25,6 +24,3 @@
   height: 80px;
 }
 
-.gif {
-  position: fixed;
-}
