--- a/src/Component/CreateEvent.css
+++ b/src/Component/CreateEvent.css
@@ -1,13 +1,31 @@
-.create-event-card{
+.create-event-card {
   display: inline-block;
+
+  width: 70%;
+  max-width: 600px;
   background-color: #f7f7f7;
   padding: 50px;
   border-radius: 20px;
   box-shadow: 2px 5px 10px rgba(116, 116, 116, 0.4);
   font-size: 18px;
+  margin: 20px;
 }
 
 .create-event {
-  margin-left: 25% ;
-width: 50%;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+
+.add-event {
+  margin-top: 50px;
+  margin-bottom: 20px;
+  font-weight: bold;
+  padding: 15px 70px;
+  background-image: linear-gradient(to top right, #ff9966, #ff5e62);
+  border-radius: 20px;
+}
+.add-event:hover {
+  box-shadow: 0px 5px 10px rgba(116, 116, 116, 0.4);
+  transition: all 0.5s ease-in;
 }
