--- a/src/Component/Header.css
+++ b/src/Component/Header.css
@@ -3,10 +3,10 @@
   padding: 20px 15px;
   display: flex;
   align-items: center;
-  justify-content: space-around ;
+  justify-content: center;
   box-shadow: 0px 3px 0px 0px rgba(116, 116, 116, 0.4);
   position: static;
-  background-color: #fbfbfb;
+  background-image: linear-gradient(to bottom, #fdfbfb, #ebedee);
   margin-bottom: 20px;
 }
 .Header a {
@@ -33,11 +33,12 @@
 
 .Header ul li {
   display: none;
+  text-align: left;
   position: absolute;
   background-color: #f7f7f7;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  padding: 12px 16px;
+  padding: 12px 10px;
   z-index: 1;
   text-decoration: none;
 }
@@ -45,6 +46,7 @@
 .Header ul li a {
   color: black;
   text-decoration: none;
+  text-align: center;
 }
 
 .Header ul:hover li {
@@ -55,4 +57,23 @@
   position: fixed;
   top: 0;
   width: 100%;
+}
+
+.create-event-button {
+  margin-top: 15px;
+  margin-left: 20px;
+  margin-right: 50px;
+  margin-bottom: 20px;
+  font-weight: bold;
+  padding: 10px 40px;
+  background-image: linear-gradient(to top right, #ff9966, #ff5e62);
+  border-radius: 20px;
+}
+.create-event-button:hover {
+  box-shadow: 0px 5px 10px rgba(116, 116, 116, 0.4);
+  transition: all 0.5s ease-in;
+}
+
+.brandLogo {
+  margin-right: 30px;
 }
