--- a/src/Component/MyMap.css
+++ b/src/Component/MyMap.css
@@ -1,8 +1,8 @@
 .map {
-  margin-left: 500px;
   width: 50%;
+  min-width: 400px;
   height: 60vh;
-  box-shadow: 2px 5px 10px #e0e0e0;
+  box-shadow: 0px 5px 5px rgba(116, 116, 116, 0.4);
 }
 
 .map:hover{
