--- a/src/Component/SingleEvent.css
+++ b/src/Component/SingleEvent.css
@@ -7,7 +7,7 @@
   margin: 10px auto;
   border-radius: 10px;
   background-color: #f9f9f9;
-  box-shadow: 2px 5px 10px rgba(116, 116, 116, 0.4);
+  box-shadow: 0px 5px 5px rgba(116, 116, 116, 0.4);
 }
 
 .card:hover {
@@ -29,10 +29,11 @@
 }
 
 .button {
+  margin-top : 15px;
   margin-bottom: 20px;
   font-weight: bold;
-  padding: 15px 70px;
-  background-color: rgb(255, 133, 34);
+  padding: 15px 40px;
+  background-image: linear-gradient(to top right,#ff9966  ,#ff5e62);
   border-radius: 20px;
 }
 .button:hover {
