--- a/src/Container/EventGallery.css
+++ b/src/Container/EventGallery.css
@@ -2,6 +2,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .galleryandbox {
@@ -34,7 +35,7 @@
   padding: 1em;
   border-radius: 20px;
   background-color: #f7f7f7;
-  box-shadow: 2px 5px 10px #e0e0e0;
+  box-shadow: 0px 5px 5px rgba(116, 116, 116, 0.4);
 }
 
 .search-box-container:hover{
