--- a/src/Component/MyMap.css
+++ b/src/Component/MyMap.css
@@ -1,8 +1,10 @@
 .map {
-  width: 50%;
-  min-width: 400px;
-  height: 60vh;
+  width: 90%;
+  max-width: 1200px;
+  height: 30vh;
   box-shadow: 0px 5px 5px rgba(116, 116, 116, 0.4);
+  overflow: hidden;
+  margin-bottom: 10px;
 }
 
 .map:hover{
