--- a/src/Component/SingleEvent.css
+++ b/src/Component/SingleEvent.css
@@ -1,31 +1,34 @@
-.card {
+.singleEventCard {
   align-items: center;
-  width: 60%;
-  min-width: 400px;
+  width:30%;
+  min-width: 350px;
   font-size: 18px;
   padding: 0.25em;
   margin: 10px auto;
   border-radius: 10px;
   background-color: #f9f9f9;
   box-shadow: 0px 5px 5px rgba(116, 116, 116, 0.4);
+  font-weight: 400;
 }
 
-.card:hover {
+.singleEventCard:hover {
   box-shadow: 2px 5px 10px rgb(104, 104, 104);
   transition: all 0.5s ease-in-out;
 }
 
-.card img {
+.singleEventCard img {
   display: inline-block;
-  text-align: center;
-  width: 50%;
+  /* text-align: center; */
+  width: 30%;
   max-width: 200px;
   object-fit: scale-down;
   margin-top: 30px;
   margin-bottom: 0px;
 }
-.text-container {
-  text-align: center;
+.singleEventTextContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
 .button {
@@ -43,4 +46,10 @@
 .description {
   margin: auto;
   width: 90%;
+}
+
+.textOrder{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
