--- a/src/Container/EventGallery.css
+++ b/src/Container/EventGallery.css
@@ -2,6 +2,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -15,22 +16,16 @@
   width: 100%;
   flex-direction: column;
   height: 1200px;
-  overflow: visible;
-}
-
-
-.event-gallery-align {
-  font-size: 15px;
-  display: flex;
-  flex-direction: column;
+  align-items: center;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .search-box-container {
   display: flex;
   flex-direction: column;
-  width: 80%;
+  width: 85%;
   max-width: 1000px;
-  margin: 20px auto;
   font-size: 12px;
   padding: 1em;
   border-radius: 20px;
@@ -44,7 +39,8 @@
 }
 
 .searchbox {
-  width: 50%;
+
+  width: 100%;
   max-width: 600px;
   height: 30px;
   margin: 10px auto;
@@ -55,5 +51,8 @@
   box-shadow: 2px 5px 10px #e0e0e0;
 }
 
-
-
+.test{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
