--- a/src/Component/CreateEvent.css
+++ b/src/Component/CreateEvent.css
@@ -1,20 +1,18 @@
 .create-event-card {
   display: inline-block;
-
-  width: 70%;
-  max-width: 600px;
+  width: 100%;
+  max-width: 350px;
+  padding: 20px;
   background-color: #f7f7f7;
-  padding: 50px;
   border-radius: 20px;
   box-shadow: 2px 5px 10px rgba(116, 116, 116, 0.4);
   font-size: 18px;
-  margin: 20px;
 }
 
 .create-event {
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  width: 100%;
 }
 
 .add-event {
@@ -28,4 +26,10 @@
 .add-event:hover {
   box-shadow: 0px 5px 10px rgba(116, 116, 116, 0.4);
   transition: all 0.5s ease-in;
+}
+
+.textSpace {
+  width: 100%;
+  height: 300px;
+  resize: none;
 }
