--- a/src/Component/Header.css
+++ b/src/Component/Header.css
@@ -1,9 +1,7 @@
 .Header {
-  /* background-color: #ff4424; */
-  padding: 20px 15px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   box-shadow: 0px 3px 0px 0px rgba(116, 116, 116, 0.4);
   position: static;
   background-image: linear-gradient(to bottom, #fdfbfb, #ebedee);
@@ -60,12 +58,10 @@
 }
 
 .create-event-button {
-  margin-top: 15px;
-  margin-left: 20px;
-  margin-right: 50px;
-  margin-bottom: 20px;
+ margin-left: 20px;
   font-weight: bold;
-  padding: 10px 40px;
+  padding: 10px 0px;
+  min-width: 130px;
   background-image: linear-gradient(to top right, #ff9966, #ff5e62);
   border-radius: 20px;
 }
@@ -76,4 +72,9 @@
 
 .brandLogo {
   margin-right: 30px;
+}
+
+.divAlign{
+  display: flex;
+  align-items: center;
 }
