--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,15 @@
 .App {
   display: flex;
   flex-direction: column;
-align-items: center;
+  align-items: center;
   font-family: Helvetica;
   font-weight: lighter;
+  height: 100%;
 }
 
 :root {
-  background-image: linear-gradient(to top right, #2b2b2a, #ff5e5e);
-  background-position-x: 0px;
-  background-position-y: 0px;
-  /* animation: backgroundMove 100%, ease-in-out infinite; */
-}
-
-.header {
-  background-color: rgb(54, 192, 211);
-  padding: 30px 100px;
-  display: flex;
-  justify-content: space-between;
-  align-content: center;
-}
-
-.header img {
-  height: 80px;
+  background-image: linear-gradient(to top right, #d1934c, #fb6f4c);
+  background-size: cover;
+  background-position: center;
+  height: inherit;
 }
