--- a/src/Component/Home.css
+++ b/src/Component/Home.css
@@ -1,5 +1,15 @@
-.home-box {
-  background-color: #f7f7f7;
-  padding: 100px;
-  border: 10px red;
+.Home-align {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.Home-border {
+  width: 40%;
+  margin: 50px;
+  padding: 200px 10px;
+  background-color: ivory;
+  border: 1px solid rgb(65, 65, 65);
+  border-radius: 10px;
 }
