--- a/src/Component/MyMap.css
+++ b/src/Component/MyMap.css
@@ -1,10 +1,10 @@
 .map {
   width: 90%;
   max-width: 1200px;
-  height: 30vh;
+  height: 60vh;
   box-shadow: 0px 5px 5px rgba(116, 116, 116, 0.4);
   overflow: hidden;
-  margin-bottom: 10px;
+  margin: 10px 0px;
 }
 
 .map:hover {
