Change CSS for create event and register user

--- a/src/Component/CreateEvent.css
+++ b/src/Component/CreateEvent.css
@@ -1,5 +1,6 @@
 .create-event-card {
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
   width: 100%;
   max-width: 350px;
   padding: 20px;
