--- a/src/Component/SingleEventCard.css
+++ b/src/Component/SingleEventCard.css
@@ -2,9 +2,9 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  width: 30%;
+  width: 20%;
   min-width: 325px;
-  margin: 10px auto;
+  margin: 10px 20px;
   border-radius: 10px;
   background-color: #f9f9f9;
   box-shadow: 0px 5px 5px rgba(116, 116, 116, 0.4);
